--- a/frontend-mentor/typemaster-pre-launch-landing-page/scss/_tablet.scss
+++ b/frontend-mentor/typemaster-pre-launch-landing-page/scss/_tablet.scss
@@ -1,4 +1,4 @@
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 481px) {
   body {
     padding: 40px;
   }
@@ -85,7 +85,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      gap: unset;
+      gap: 30px;
       margin-bottom: 72px;
 
       &--tablet {
@@ -102,9 +102,12 @@
     }
 
     &__title {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+      &--text {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 36px;
+      }
 
       p {
         max-width: 398px;
