--- a/frontend-mentor/calculator-app/scss/pages/_desktop.scss
+++ b/frontend-mentor/calculator-app/scss/pages/_desktop.scss
@@ -4,7 +4,7 @@ body {
   align-items: center;
   min-height: 100vh;
   background-color: $bg;
-  padding: 28px 24px 32px;
+  padding: 16px 32px;
   transition: all 0.5s;
 }
 
