--- a/frontend-mentor/calculator-app/scss/components/_theme-switch.scss
+++ b/frontend-mentor/calculator-app/scss/components/_theme-switch.scss
@@ -25,9 +25,11 @@
     background-color: $input-equal-bg;
     border-radius: 50%;
     opacity: 0;
+    transition: background-color 0.3s;
 
     &:hover {
       cursor: pointer;
+      background-color: $input-equal-bg-hover;
     }
   }
 }
