--- a/frontend-mentor/tic-tac-toe/scss/main.scss
+++ b/frontend-mentor/tic-tac-toe/scss/main.scss
@@ -3,6 +3,8 @@
 @import "./base/reset";
 @import "./base/typography";
 
+@import "./components/lobby";
+@import "./components/modals";
 @import "./components/buttons";
 
 @import "./pages/desktop";
