--- a/frontend-mentor/tic-tac-toe/scss/pages/_mobile.scss
+++ b/frontend-mentor/tic-tac-toe/scss/pages/_mobile.scss
@@ -2,6 +2,11 @@ body {
   background-color: $dark-navy;
   text-transform: uppercase;
   padding: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 
 header,
@@ -9,6 +14,7 @@ main,
 footer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  max-width: 460px;
 }
 
 header {
@@ -27,13 +33,11 @@ header {
     border-radius: 5px;
     gap: 9px;
 
-    svg {
+    img {
       width: 16px;
       height: 16px;
-
-      path {
-        fill: $silver;
-      }
+      filter: invert(86%) sepia(3%) saturate(1227%) hue-rotate(153deg)
+        brightness(86%) contrast(96%);
     }
 
     p {
@@ -51,15 +55,6 @@ main {
   grid-template-rows: repeat(3, 1fr);
   gap: 20px;
   margin-bottom: 20px;
-
-  button {
-    width: 96px;
-    height: 96px;
-    background: #1f3641;
-    box-shadow: inset 0px -8px 0px #10212a;
-    border-radius: 10px;
-    border: 0;
-  }
 }
 
 footer {
