tic-tac-toe: hover states, tablet/desktop design

--- a/frontend-mentor/tic-tac-toe/scss/abstracts/_variables.scss
+++ b/frontend-mentor/tic-tac-toe/scss/abstracts/_variables.scss
@@ -1,11 +1,17 @@
 $dark-navy: #1a2a33;
 $semi-dark-navy: #1f3641;
+$navy-shadow: #10212a;
 
 $silver: #a8bfc9;
 $silver-hover: #dbe8ed;
+$silver-shadow: #6b8997;
 
 $light-blue: #31c3bd;
 $light-blue-hover: #65e9e4;
+$light-blue-shadow: #118c87;
 
 $light-yellow: #f2b137;
 $light-yellow-hover: #ffc860;
+$light-yellow-shadow: #cc8b13;
+
+$anim-delay: 0.2s;
