--- a/frontend-mentor/tic-tac-toe/scss/main.scss
+++ b/frontend-mentor/tic-tac-toe/scss/main.scss
@@ -7,5 +7,5 @@
 @import "./components/modals";
 @import "./components/buttons";
 
-@import "./pages/desktop";
 @import "./pages/mobile";
+@import "./pages/tablet";
