--- a/frontend-mentor/tic-tac-toe/scss/components/_lobby.scss
+++ b/frontend-mentor/tic-tac-toe/scss/components/_lobby.scss
@@ -11,9 +11,15 @@
   height: 100%;
   overflow: auto;
   padding: 24px;
-  background-color: #1a2a33;
+  background-color: $dark-navy;
+
+  &__content {
+    max-width: 460px;
+  }
 
   img {
+    display: block;
+    margin: auto;
     margin-bottom: 32px;
   }
 
@@ -24,8 +30,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: #1f3641;
-    box-shadow: inset 0px -8px 0px #10212a;
+    background: $semi-dark-navy;
+    box-shadow: inset 0px -8px 0px $navy-shadow;
     border-radius: 15px;
     padding: 24px 32px 30px;
 
@@ -40,12 +46,12 @@
       font-size: 16px;
       line-height: 20px;
       letter-spacing: 1px;
-      color: #a8bfc9;
+      color: $silver;
       margin-bottom: 24px;
     }
 
     &--choice {
-      background: #1a2a33;
+      background: $dark-navy;
       border-radius: 10px;
       padding: 8px;
       margin-bottom: 16px;
@@ -58,23 +64,34 @@
         border: 0;
         width: 50%;
         background: transparent;
+        transition: background $anim-delay;
 
         img {
           display: block;
           margin: auto;
           width: 32px;
           height: 32px;
+          transition: filter $anim-delay;
           filter: invert(86%) sepia(3%) saturate(1227%) hue-rotate(153deg)
             brightness(86%) contrast(96%);
         }
 
         &.selected {
-          background: #a8bfc9;
+          background: $silver;
 
           img {
             filter: invert(13%) sepia(15%) saturate(1260%) hue-rotate(158deg)
               brightness(94%) contrast(93%);
           }
+
+          &:hover {
+            background: $silver;
+          }
+        }
+
+        &:hover {
+          cursor: pointer;
+          background: rgba(168, 191, 201, 0.05);
         }
       }
     }
@@ -84,12 +101,9 @@
       font-size: 14px;
       line-height: 18px;
       letter-spacing: 0.875px;
-      color: #a8bfc9;
+      color: $silver;
       mix-blend-mode: normal;
       opacity: 0.5;
     }
-  }
-
-  &__gamemode {
   }
 }
