--- a/frontend-mentor/github-user-search-app/scss/_mobile.scss
+++ b/frontend-mentor/github-user-search-app/scss/_mobile.scss
@@ -2,13 +2,14 @@ body {
   font-family: "Space Mono", monospace;
   background-color: $bg;
   color: $text;
-  margin: 32px 24px;
+  padding: 32px 24px;
 }
 
 header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
   margin-bottom: 36px;
 
   p {
@@ -56,7 +57,7 @@ form {
     background-color: $card-bg;
     box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.198567);
     border-radius: 15px;
-    padding: 18px 16px 18px 50px;
+    padding: 18px 104px 18px 50px;
     font-family: "Space Mono", monospace;
     border: 0;
     font-weight: 400;
@@ -79,10 +80,27 @@ form {
     text-align: center;
     font-family: "Space Mono", monospace;
     color: $white;
+    transition: background-color 0.2s;
 
     &:hover {
       background-color: #60abff;
     }
+  }
+}
+
+.form__error {
+  opacity: 0;
+  transition: opacity 0.2s;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 22px;
+  color: $error;
+  position: absolute;
+  top: -24px;
+  right: 7px;
+
+  &.active {
+    opacity: 1;
   }
 }
 
